# dz28.2

./: db.sqlite3  manage.py  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
ads/url/: ad.py  cat.py
data/: ad.json  ads.json  category.json  location.json  user.json
dz_27/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  url.py  views.py
users/migrations/: 0001_initial.py  0002_rename_location_id_person_location.py  0003_alter_location_lat_alter_location_lng.py
utils/: utils.py
