[tool.poetry]
name = "dz-27"
version = "0.1.0"
description = ""
authors = ["vladimirmac <vladimirbodrin89@gmail.com>"]
readme = "README.md"
packages = [{include = "dz_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
